# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/ability/idl_tool/idl_tool.gni")

module_output_path = "idl_tool/idl_tool"

IDL_DIR = "../../../"

config("idl_tool_2_test_config") {
  visibility = [ ":*" ]
  include_dirs = [ "${IDL_DIR}/test/unittest/include" ]
}

common_sources = [
  "${IDL_DIR}/codegen/SA/sa_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_array_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_cstring_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_enum_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_fd_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_fdsan_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_int_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_long_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_seq_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_set_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_short_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_string_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_struct_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_u16string_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_uchar_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_uint_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_ulong_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_union_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_ushort_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_map_type_emitter.cpp",
  "${IDL_DIR}/codegen/SA/type/sa_orderedmap_type_emitter.cpp",
  "${IDL_DIR}/util/light_refcount_base.cpp",
  "${IDL_DIR}/util/logger.cpp",
  "${IDL_DIR}/util/string_builder.cpp",
  "${IDL_DIR}/util/string_helper.cpp",
]

ohos_unittest("SaArrayTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_array_type_emitter_test.cpp" ]
  sources += common_sources

  defines = [ "IDLTOOL_GTEST" ]

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaCStringTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_cstring_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaFdTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_fd_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaFdSanTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_fdsan_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaLongTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_long_type_emitter_test.cpp" ]
  sources += common_sources

  defines = [ "IDLTOOL_GTEST" ]

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaUshortTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_ushort_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaSeqTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_seq_type_emitter_test.cpp" ]
  sources += common_sources

  defines = [ "IDLTOOL_GTEST" ]

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaStructTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_struct_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaUnionTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_union_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaEnumTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_enum_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaUlongTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_ulong_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaUintTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_uint_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaUcharTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_uchar_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaU16stringTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_u16string_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaStringTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_string_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaShortTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_short_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaSetTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_set_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaMapTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_map_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

ohos_unittest("SaOrderedMapTypeEmitterTest") {
  module_out_path = module_output_path
  include_dirs = [ "${IDL_DIR}" ]

  configs = [ ":idl_tool_2_test_config" ]
  sources = [ "./sa_orderedmap_type_emitter_test.cpp" ]
  sources += common_sources

  deps = []

  external_deps = [ "c_utils:utils" ]

  part_name = "idl_tool"
  subsystem_name = "ability"
}

group("unittest") {
  testonly = true
  deps = [
    ":SaArrayTypeEmitterTest",
    ":SaCStringTypeEmitterTest",
    ":SaEnumTypeEmitterTest",
    ":SaFdTypeEmitterTest",
    ":SaFdSanTypeEmitterTest",
    ":SaLongTypeEmitterTest",
    ":SaUshortTypeEmitterTest",
    ":SaSeqTypeEmitterTest",
    ":SaSetTypeEmitterTest",
    ":SaStructTypeEmitterTest",
    ":SaUnionTypeEmitterTest",
    ":SaUlongTypeEmitterTest",
    ":SaUintTypeEmitterTest",
    ":SaUcharTypeEmitterTest",
    ":SaU16stringTypeEmitterTest",
    ":SaStringTypeEmitterTest",
    ":SaShortTypeEmitterTest",
    ":SaMapTypeEmitterTest",
    ":SaOrderedMapTypeEmitterTest",
  ]
}
